# LibAAF

./: .gitignore  AAF Observations.md  CMakeLists.txt  GenerateVersionHeader.cmake  Makefile  README.md  SOFTWARE_NOTES.md  TODO  TODO_fail_aaf  libaaf.pc.in
LibAAF/: Makefile  libAAF.h
LibAAF/AAFCore/: AAFClass.c  AAFClass.h  AAFCore.c  AAFCore.h  AAFDump.c  AAFDump.h  AAFToText.c  AAFToText.h  AAFTypes.h  AAFUtils.c  AAFUtils.h
LibAAF/AAFCore/AAFDefs/: AAFClassDefUIDs.h  AAFCodecDefs.h  AAFCompressionDefs.h  AAFContainerDefs.h  AAFDataDefs.h  AAFExtEnum.h  AAFFileKinds.h  AAFInterpolatorDefs.h  AAFOPDefs.h  AAFOperationDefs.h  AAFParameterDefs.h  AAFPluginDefs.h  AAFPropertyDefs.h  AAFTypeDefUIDs.h
LibAAF/AAFIface/: AAFIAudioFiles.c  AAFIAudioFiles.h  AAFIParser.c  AAFIParser.h  AAFIface.c  AAFIface.h  ProTools.c  ProTools.h
LibAAF/LibCFB/: CFBDump.c  CFBDump.h  CFBTypes.h  LibCFB.c  LibCFB.h
LibAAF/common/: .debug.h.swp  debug.h  utils.c  utils.h
ardour/: Makefile  README.md  ardour_aafimport.cc  common.cc  fileops.c  fileops.h
doc/: .gitignore  Doxygen.conf  Makefile  doxygen.in  layout.xml  modules.dox  page.md  style.css
doc/theme/: doxygen-awesome.css  header.html
example/: global_aaf_parsing  global_aaf_parsing.c
examples/: .gitignore  global_aaf_parsing.c
include/: libaaf.h
include/libaaf/: AAFCore.h  AAFDump.h  AAFIAudioFiles.h  AAFIEssenceFile.h  AAFIParser.h  AAFIface.h  AAFToText.h  AAFTypes.h  CFBDump.h  LibCFB.h  MediaComposer.h  ProTools.h  Resolve.h  debug.h  log.h  utils.h  version.h
include/libaaf/AAFDefs/: AAFClassDefUIDs.h  AAFCodecDefs.h  AAFCompressionDefs.h  AAFContainerDefs.h  AAFDataDefs.h  AAFExtEnum.h  AAFFileKinds.h  AAFInterpolatorDefs.h  AAFOPDefs.h  AAFOperationDefs.h  AAFParameterDefs.h  AAFPluginDefs.h  AAFPropertyDefs.h  AAFTypeDefUIDs.h
src/: debug.c  index.md  libAAF.h  version.h.in
src/AAFCore/: AAFClass.c  AAFClass.h  AAFCore.c  AAFDump.c  AAFToText.c  Makefile
src/AAFIface/: AAFIAudioFiles.c  AAFIEssenceFile.c  AAFIParser.c  AAFIface.c  MediaComposer.c  ProTools.c  RIFFParser.c  RIFFParser.h  Resolve.c  URIParser.c  URIParser.h  a.out
src/LibCFB/: CFBDump.c  LibCFB.c
src/common/: log.c  utils.c  utils.h
standard/: README.txt
test/: README.md  test.py  test.sh
test/aaf/: DR_Audio_Levels.aaf  DR_Empty.aaf  DR_MP3_External.aaf  DR_Markers.aaf  DR_Mono_Clip_Positioning.aaf  DR_Multichannel_5.1_single_source.aaf  DR_Multichannel_7.1_single_source.aaf  DR_Multichannel_stereo_single_source.aaf  DR_Stereo_Clip_Positioning.aaf  LogicPro 10.7.4.5614.AAF  MC_Audio_Levels.aaf  MC_Audio_Pan.aaf  MC_Audio_Warp.aaf  MC_Clip_Mute.aaf  MC_Empty.aaf  MC_Fades.aaf  MC_Markers.aaf  MC_Metadata.aaf  MC_TC_100.aaf  MC_TC_119.88_DF.aaf  MC_TC_119.88_NDF.aaf  MC_TC_120_DF.aaf  MC_TC_120_NDF.aaf  MC_TC_23.976.aaf  MC_TC_24.aaf  MC_TC_25.aaf  MC_TC_29.97_DF.aaf  MC_TC_29.97_NDF.aaf  MC_TC_30_DF.aaf  MC_TC_30_NDF.aaf  MC_TC_50.aaf  MC_TC_59.94_DF.aaf  MC_TC_59.94_NDF.aaf  MC_TC_60_DF.aaf  MC_TC_60_NDF.aaf  MC_Track_Solo_Mute.aaf  PR_AIFF_Internal.aaf  PR_Audio_Levels-noBTM.aaf  PR_Audio_Pan-noBTM.aaf  PR_Clip_length_beyond_EOF.aaf  (+26 more)
test/expected/: DR_Audio_Levels.aaf.expected  DR_Empty.aaf.expected  DR_MP3_External.aaf.expected  DR_Markers.aaf.expected  DR_Mono_Clip_Positioning.aaf.expected  DR_Multichannel_5.1_single_source.aaf.expected  DR_Multichannel_7.1_single_source.aaf.expected  DR_Multichannel_stereo_single_source.aaf.expected  DR_Stereo_Clip_Positioning.aaf.expected  MC_Audio_Levels.aaf.expected  MC_Audio_Pan.aaf.expected  MC_Audio_Warp.aaf.expected  MC_Clip_Mute.aaf.expected  MC_Empty.aaf.expected  MC_Fades.aaf.expected  MC_Markers.aaf.expected  MC_Metadata.aaf.expected  MC_TC_100.aaf.expected  MC_TC_119.88_DF.aaf.expected  MC_TC_119.88_NDF.aaf.expected  MC_TC_120_DF.aaf.expected  MC_TC_120_NDF.aaf.expected  MC_TC_23.976.aaf.expected  MC_TC_24.aaf.expected  MC_TC_25.aaf.expected  MC_TC_29.97_DF.aaf.expected  MC_TC_29.97_NDF.aaf.expected  MC_TC_30_DF.aaf.expected  MC_TC_30_NDF.aaf.expected  MC_TC_50.aaf.expected  MC_TC_59.94_DF.aaf.expected  MC_TC_59.94_NDF.aaf.expected  MC_TC_60_DF.aaf.expected  MC_TC_60_NDF.aaf.expected  MC_Track_Solo_Mute.aaf.expected  PR_AIFF_Internal.aaf.expected  PR_Audio_Levels-noBTM.aaf.expected  PR_Audio_Pan-noBTM.aaf.expected  PR_Clip_length_beyond_EOF.aaf.expected  PR_Fades.aaf.expected  (+27 more)
test/res/: 1000hz-18dbs16b44.1k.aiff
test/units/: common.h  test_libtc.c  test_uri.c  test_utils.c
tools/: AAF2Ardour.c  AAFExtract.c  AAFInfo.c  AAFTool.c  Makefile  common.c  common.h
tools/Ardour/: Ardour.c  Ardour.h  Ardour_SessionFile.h  Ardour_SessionFileSimple.h
tools/win/: getopt.h
